syntax = "proto3";

option go_package = "grpc-token/auth";

package auth;

service TokenService {
  rpc GenToken (PasswordRequest) returns (TokenResponse) {}
  rpc ParseToken (TokenRequest) returns (ClaimsResponse) {}
}

message PasswordRequest {
  string password = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string token = 1;
}

message ClaimsResponse {
  string password = 1;
  int64 expires_at = 2;
  string issuer = 3;
}